# plone.app.multilingual

./: .editorconfig  .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CREDITS.rst  MANIFEST.in  README.rst  README.txt  bootstrap.py  buildout.cfg  jenkins.cfg  mx.ini  pyproject.toml  setup.cfg  setup.py  test-plone-4.1.x.cfg  test-plone-4.2.x.cfg  test-plone-4.3.x.cfg  test-plone-4.x.cfg  test-plone-5.0.x.cfg  test-plone-5.1.x.cfg  test-plone-5.x.cfg  tox.ini  travis.cfg
.github/workflows/: meta.yml  test-matrix.yml
devel/plone/app/multilingual/: __init__.py  api.py  configure.zcml  factory.py  indexer.py  interfaces.py  itg.py  languagetool.py  manager.py  overrides.zcml  permissions.zcml  setuphandlers.py  shared_uuid.py  subscriber.py  testing.py  upgrades.py  upgrades.zcml
devel/plone/app/multilingual/browser/: add.py  at_babel_view.py  configure.zcml  controlpanel.py  edit.py  helper_views.py  interfaces.py  menu.py  migrator.py  remove.py  selector.py  setup.py  switcher.py  translate.py  update.py  update_language_form.py  utils.py  view.py  viewlets.py  vocabularies.py
devel/plone/app/multilingual/content/: lrf.py
devel/plone/app/multilingual/dx/: cloner.py  configure.zcml  directives.py  form.py  interfaces.py  language.py  meta.py  meta.zcml  schemaeditor.py  subscriber.py  supermodel.py  utils.py  validator.py
devel/plone/app/multilingual/locales/: plone.app.multilingual.pot
devel/plone/app/multilingual/tests/: catalog.txt  configure.zcml  form.txt  menu.txt  test_alternates.py  test_api.py  test_catalog.py  test_directives.py  test_doctests.py  test_form.py  test_helper_views.py  test_lif.py  test_lrf.py  test_menu.py  test_robot.py  test_selector.py  test_setup.py  test_subscribers.py  test_vocabularies.py  utils.py
devel/plone/app/multilingual/www/: indexHistogram.pt
docs/: CREDITS.txt  HISTORY.txt  LICENSE.txt  MANUAL.txt  Makefile  conf.py  index.rst
news/: +bootstrap-button-class.bugfix  +contentbrowser_fix.tests.md  +ignore.bugfix  +lock.bugfix  +meta.internal  +setupmultilingualsite.feature  1001.bugfix  256.bugfix  256.feature  303.bugfix  304.bugfix  304.bugfix.1  304.bugfix.2  304.bugfix.3  3130.bugfix  337.bugfix  338.bugfix  339.bugfix  340.bugfix  342.bugfix  345.bugfix  355.bugfix  357.bugfix  358.bugfix  360.bugfix  362.feature  365.bugfix  371.feature  372.bugfix  373.bugfix  375.bugfix  384.bugfix  387.feature  390.bugfix  393.bugfix  394.bugfix  397-2.bugfix  397.bugfix  401.bugfix  402.bugfix  (+37 more)
src/plone/app/multilingual/: __init__.py  _compat.py  api.py  catalog.py  configure.zcml  events.py  factory.py  google_translate.py  indexer.py  interfaces.py  itg.py  languagetool.py  manager.py  overrides.zcml  permissions.py  permissions.zcml  profile.py  setuphandlers.py  shared_uuid.py  subscriber.py  testing.py  testing.zcml  translation_utils.py  upgrades.py  upgrades.zcml  utils.py  vocabularies.py
src/plone/app/multilingual/Extensions/: install.py
src/plone/app/multilingual/browser/: add.py  add_translation_form.py  at_babel_view.pt  at_babel_view.py  babel_edit.pt  babel_view.pt  babel_view.py  configure.zcml  controlpanel.pt  controlpanel.py  dexterity_edit.pt  dx_babel_view.pt  edit.py  helper_views.py  interfaces.py  item.pt  languageselector.pt  menu.py  migration-after.pt  migration.pt  migrator.pt  migrator.py  migrator_after.pt  mmap.pt  modify.py  remove.py  remove_translation_form.py  selector.py  setup.py  sitemap.py  switcher.py  translate.py  universal_link.py  update.py  update_language_form.py  utils.py  view.py  viewlets.py  vocabularies.py  (+1 more)
(+204 files in other folders)
