[metadata]
version = 7.0.2
name = plone.app.multilingual
description = Multilingual Plone Content package
long_description = file: README.rst, CREDITS.rst, CHANGES.rst
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.0
    Framework :: Plone :: Core
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/plone/plone.app.multilingual
license = GPL
keywords = language, multilingual, content
author = Ramon Navarro, Victor Fernandez de Alba, awello et al
author_email = r.navarro@iskra.cat
maintainer = Plone Foundation
maintainer_email = releasemanager@plone.org

[options]
python_requires = >=3.8

[check-manifest]
ignore =
    .editorconfig
    .meta.toml
    .pre-commit-config.yaml
    tox.ini

[bdist_wheel]
universal = 0

[flake8]
doctests = 1
ignore =
    # black takes care of line length
    E501,
    # black takes care of where to break lines
    W503,
    # black takes care of spaces within slicing (list[:])
    E203,
    # black takes care of spaces after commas
    E231,
