[metadata]
version = 7.0.6.dev0
name = plone.app.multilingual
description = Multilingual Plone Content package
long_description = file: README.rst, CREDITS.rst, CHANGES.rst
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.0
    Framework :: Plone :: Core
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/plone/plone.app.multilingual
license = GPL
keywords = language, multilingual, content
author = Ramon Navarro, Victor Fernandez de Alba, awello et al
author_email = r.navarro@iskra.cat
maintainer = Plone Foundation
maintainer_email = releasemanager@plone.org

[options]
python_requires = >=3.8
